# minicc

./: CMakeLists.txt  Makefile  README.md  TODO.md  arm64-gen.c  configure  libtcc.c  tcc.c  tcc.h  tccelf.c  tccgen.c  tccpp.c  tccwasm.c  wasm-backend.h  wasm-gen.c  wasm-link.c  wasm-specs.md  wasm32-opts.md
.github/workflows/: build.yml  cmake-ci.yml
cmake/: RunWasmCompileFailTest.cmake  RunWasmTest.cmake  config.h.in
lib/: lib-arm64.c  libtcc1.c
tests/: Makefile  libtcc_api_test.c
tests/wasm/: Makefile  call_indirect.c  coalesce_arith.c  coalesce_branch.c  coalesce_directbr.c  coalesce_loops.c  coalesce_mandel.c  coalesce_peephole.c  data_init.c  frame_locals.c  ftoi_casts.c  globals.c  ll_helpers.c  numeric_conversions.c  run-wasm.mjs  static_ptr_init.c  structured_cf.c  unresolved_call.c
